<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_const_jupiter"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_jupiter"
        android:contentDescription="@string/default_image_description"/>

    <TextView
        android:id="@+id/tv_const_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/s_jupiter"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/iv_const_jupiter"
        app:layout_constraintEnd_toStartOf="@id/iv_drag_handle"
        app:layout_constraintStart_toEndOf="@id/iv_const_jupiter"
        app:layout_constraintTop_toTopOf="@id/iv_const_jupiter" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_drag_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:tint="@color/cardview_shadow_start_color"
        app:layout_constraintBottom_toBottomOf="@id/iv_const_jupiter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_const_jupiter"
        app:srcCompat="@drawable/ic_hamburger_menu_bottom_bar" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/s_jupiter_description"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_const_jupiter"
        tools:visibility="visible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/background_contrast_default_color"
        app:layout_constraintBottom_toBottomOf="@id/iv_const_jupiter"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>